--- a/index.html
+++ b/index.html
@@ -8,20 +8,22 @@
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <title>Website Kopi Kuy</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 
-<body>
+<body style="background-color: rgb(233, 197, 157);">
     <nav>
         <div class="baris">
             <img class="logo" src="images/logo/logo_kuy.png">
             <div class="navigasi">
-                <a href="#best-seller">Best Seller</a>
-                <a href="#our-team">Our Team</a>
-                <a href="#review">Review</a>
-                <a href="#contact-us">Contact Us</a>
+                <a href="#best-seller" class="text-decoration-none">Best Seller</a>
+                <a href="#our-team" class="text-decoration-none">Our Team</a>
+                <a href="#review" class="text-decoration-none">Review</a>
+                <a href="#contact-us" class="text-decoration-none">Contact Us</a>
             </div>
-            <a class="shop" href="produk.html">Shop</a>
-            <a class="chat" href="https://wa.me/nomor_hp_anda_pakai_62" target="_blank">Chat</a>
+            <a class="shop text-decoration-none" href="produk.html">Shop</a>
+            <a class="chat text-decoration-none" href="https://wa.me/6282169889840" target="_blank">Chat</a>
         </div>
     </nav>
 
